Bug 65247 - [SNA] Ivybridge Mobile (GT2) Crash using Firefox
Summary: [SNA] Ivybridge Mobile (GT2) Crash using Firefox
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-01 15:49 UTC by Roman Jarosz
Modified: 2013-06-02 09:51 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.server log (1.68 MB, text/plain)
2013-06-01 15:49 UTC, Roman Jarosz
no flags Details
Xorg server log (1.68 MB, application/x-gzip)
2013-06-01 15:51 UTC, Roman Jarosz
no flags Details

Description Roman Jarosz 2013-06-01 15:49:52 UTC
Created attachment 80140 [details]
Xorg.server log

When I open internal page in Firefox the xorg server crashes.
It's simple page with flash in it but sadly I cannot show it to you.

xf86-video-intel-9999/src/sna/sna_damage.h:47: sna_damage_add: Assertion `!(((uintptr_t)(*damage))&1)' failed.

Full xorg log is attached.
00:02.0 VGA compatible controller: Intel Corporation 3rd Gen Core processor Graphics Controller (rev 09)
Linux kedgelenovo 3.9.4 #1 SMP Fri May 24 21:11:07 CEST 2013 x86_64 Intel(R) Core(TM) i7-3720QM CPU @ 2.60GHz GenuineIntel GNU/Linux

Using latest git version 2e11b520bbdb1af7e977db7fdef2d4c41242d56f
SNA initialized with Ivybridge (gen7) backend
Comment 1 Roman Jarosz 2013-06-01 15:51:29 UTC
Created attachment 80141 [details]
Xorg server log
Comment 2 Chris Wilson 2013-06-01 16:02:32 UTC
commit c4ad7b14ca71b95af83864b05793ea357f48bb88
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Jun 1 16:58:15 2013 +0100

    sna: Prevent adding damage to an already all-damaged GPU bo
    
    Keep the bookkeeping straight after propagating the source clear colour:
    commit 810a0ce2f89ba6b343b5043963626c0f2d50fb22 [2.21.7]
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Fri May 10 12:02:10 2013 +0100
    
        sna: Propagate clear color when replacing by a CopyArea
    
    Reported-by: Roman Jarosz <kedgedev@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=65247
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Roman Jarosz 2013-06-02 09:51:59 UTC
It works now, thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.