sna: Prevent adding damage to an already all-damaged GPU bo

Keep the bookkeeping straight after propagating the source clear colour:
commit 810a0ce2f89ba6b343b5043963626c0f2d50fb22 [2.21.7]
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri May 10 12:02:10 2013 +0100

    sna: Propagate clear color when replacing by a CopyArea

Reported-by: Roman Jarosz <kedgedev@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=65247
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>