src/sna/sna_accel.c
@@ -4678,6 +4678,7 @@ sna_copy_boxes(DrawablePtr src, DrawablePtr dst, GCPtr gc,
 						       dst_pixmap->drawable.height);
 					sna_damage_destroy(&dst_priv->cpu_damage);
 					list_del(&dst_priv->flush_list);
+					return;
 				}
 			} else {
 				struct sna_fill_op fill;
